--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -46,6 +46,9 @@
       <span class="sound">tink</span>
     </div>
   </div>
+  <div class="extras">
+  	<button data-playing="0">UNLEASH THE BEATZ</button>
+  </div>
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
@@ -58,6 +61,66 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+	window.addEventListener('keydown', playSound)
+
+	function playSound(e) {
+		const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`) || document.querySelector(`audio[data-key="${e.detail}"]`);
+		const key = document.querySelector(`div[data-key="${e.keyCode}"]`) || document.querySelector(`div[data-key="${e.detail}"]`);
+		key.classList.add('playing');
+		if(!audio) return; // Stop the function from running
+		audio.currentTime = 0; // Rewind to the start
+		audio.play();
+	}
+
+	function removeTransition(e) {
+		if(e.propertyName !== 'transform') return; // Skip it if it's not a transform
+		this.classList.remove("playing");
+	}
+
+	const keys = document.querySelectorAll(".key")
+	keys.forEach(key => {
+		key.addEventListener('transitionend', removeTransition);
+	});
+
+	// Random Beats feature
+	const beatzButton = document.querySelector("button");
+	beatzButton.addEventListener("click", toggleRandomBeatz);
+
+	function toggleRandomBeatz() {
+
+		// Toggle playing data attr
+		if (document.querySelector('button').dataset.playing == 0) {
+			document.querySelector('button').dataset.playing = 1;
+		} else {
+			document.querySelector('button').dataset.playing = 0;
+		}
+		let x = 0;
+		// If we should play then queue up an event
+		while (shouldPlay()) {
+			// Get random delay
+			let playWithRandom = function () {
+				let randomKeyIndex = Math.floor(Math.random() * keys.length);
+
+				let randomKey = keys.item(randomKeyIndex);
+				let keyCode = randomKey.getAttribute('data-key');
+
+				const event = new CustomEvent("keydown", {'detail': `${keyCode}`});
+				window.dispatchEvent(event);
+				if (document.querySelector('button').dataset.playing == 1) {
+					x += 1;
+				}
+			}
+			setTimeout(playWithRandom(), Math.random() * 1000);
+		}
+	}
+
+	function shouldPlay() {
+		if (document.querySelector('button').dataset.playing == 1) {
+			return true;
+		} else {
+			return false;
+		}
+	}
 
 </script>
 
